# ai

./: .rules  README.md  justfile  wrangler.jsonc
.claude-plugin/: README.md
.templates/: Dockerfile.packer.mustache  README.md  config.default.mustache  config.empty.mustache  docker-compose.mustache  pkrvars.mustache  sitemap.mustache  zed.settings.mustache
.zed/: README.md  TODO.md  settings.local.json
agents/: CLAUDE.md  TODO.md  agent-context-guidelines.md
agents/foo-bar/: .env  justfile  main.py  pyproject.toml
agents/foo-bar/.config/: agent.toml  claude.settings.local.json
agents/foo-bar/tools/: user.py  weather.py
agents/foo-bar/utils/: memory.py
commands/: TODO.md  add-endpoint.md
context/: CLAUDE.md-supremacy.md  TODO.tf-addy.md  claude.todo.md
docs/: agent-engineering.md  agent-first-design.md  always-be-experimenting.md  auto-accept-permissions.md  auto-plan-mode.md  bash-scripts.md  claude-usage.md  context-inspection.md  context-window-depletion.md  crypto-algorithms.md  custom-agents.md  dangerous-skip-permissions.md  dynamic-memory.md  git-clone-is-just-the-beginning.md  hooks.md  humanizing-agents.md  learn-from-the-constraint.md  output-styles.md  permutation-frameworks.md  plan-mode.md  plugins-architecture.md  poison-context.md  rev-the-engine.md  rewind.md  sanity-check.md  skeleton-projects.md  split-role-sub-agents.md  sub-agent-tactics.md  sub-agents.md  sub-agents.txt.md  tactical-model-selection.md  task-agent-tools.md  tight-feedback-loops.md  todo-lists-as-instruction-mirrors.md  ultrathink.md  vibe-coding.md
hooks/: TODO.md  (+1 more)
(+100 files in other folders)
